Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-1237

New file/project dialog has broken keyboard navigation

XMLWordPrintable

    • fa2d2717a911b0ce872de6161abcb14ca7b4f7fb

      The new file/project dialog currently has no keyboard navigation.
      We should enable it so that you can easily tab around in the dialog
      and preview the description text.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bachewii Jens
            bachewii Jens
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes