Fix broken keyboard navigation in the new file/project dialog

* Enabled proper keyboard navigation
* Skip header items when using arrow keys
* Fixed a static pixmap warning

Task-number: QTCREATORBUG-1237

Reviewed-by: Daniel Molkentin